--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
   <p class="about">
     <span class="about-sub-32"></span><span class="about-sub-26"></span><span></span>
     <p class="about-text">
-      &#128075! my name is Angkul and i am a 2nd year cs student. i just love to code in general. i still remember how i felt when i saw that loading bar in chrome for the very
-        first time. and it still blew my mind that how 0s and 1s are running this world. interests include ml, reading, anime sometimes chess and movies.
+      &#128075! my name is Angkul and i am a 2nd year cs student. i just love to code in general. isn't it crazy how 0s and 1s are running this world. interests include ml, reading, math(just for fun) anime sometimes chess and movies.
     </p>
   
-    <p>website cloned from
+    <p>site cloned from
       <a href="https://www.x.com" class="xdot-com" id="xdot-com" target="_blank"></a>
       <span class="xdot-com" style="color: white; cursor: pointer;" onclick="window.open('https://twitter.com/melqtx', '_blank');">
          @melqtx
