--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
   <span class="github" style="color: white; cursor: pointer;" onclick="window.location.href='https://github.com/angkul07';">
     github
   </span>
+  <p>
+    <br>
+  </p>
+  <img src="../images/respect.png" alt="my utmost respect">
   
 </div>
 
