finally added the animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <canvas id="canvas"></canvas>
+
 <div class="desktop-1">
   <div class="breadcrumbs"></div>
   <div class="melano">
@@ -53,7 +54,9 @@
   <img src="../images/respect.png" alt="my utmost respect">
   
 </div>
-<script src="snow.js"></script>
+
+  <script src="snow.js"></script>  
+
 </body>
 </html>
 
