adding the blog 2

--- a/index.html
+++ b/index.html
@@ -38,16 +38,10 @@
       </span>
     </p>
   
-  <a href="https://www.x.com" class="xdot-com" id="xdot-com"></a>
-  <span class="xdot-com" style="color: white; cursor: pointer;" onclick="window('https://twitter.com/angkul07', '_blank');">
-     x dot com
-  </span>
+  <a href="https://www.x.com/angkul07" class="xdot-com" id="xdot-com" target="_blank" style="color: white;">x dot com</a>
 
+  <a href="https://www.github.com/angkul07" class="xdot-com" id="xdot-com" target="_blank" style="color: white;">github</a>
 
-  <a href="https://www.github.com" class="xdot-com" id="xdot-com"></a>
-  <span class="github" style="color: white; cursor: pointer;" onclick="window.location.href='https://github.com/angkul07';">
-    github
-  </span>
   <p>
     <br>
   </p>
