--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       &#128075! my name is Angkul and i am a 2nd year cs student. i just love to code in general. isn't it crazy how 0s and 1s are running this world. interests include ml, reading, math(just for fun) anime sometimes chess and movies.
     </p>
   
-    <p>site cloned from
+    <!-- <p>site cloned from
       <a href="https://www.x.com" class="xdot-com" id="xdot-com" target="_blank"></a>
       <span class="xdot-com" style="color: white; cursor: pointer;" onclick="window.open('https://twitter.com/melqtx', '_blank');">
          @melqtx
       </span>
-    </p>
+    </p> -->
   
   <a href="https://www.x.com/angkul07" class="xdot-com" id="xdot-com" target="_blank" style="color: white;">x dot com</a>
 
